# vlp-surrogate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/____vfp/: __init__.py  api.py  pipeline.py
src/____vfp/models/: __init__.py
src/____vfp/preprocess/: __init__.py  cleaning.py  preparation.py  utils.py
src/____vfp/utils/: __init__.py  export.py
src/ecl/: __init__.py  ecl_smr_reader.py
src/metrics/: __init__.py  fit_functions.py
src/modeling/: __init__.py  api.py  base.py  genetic_regressor.py  linear_regression.py
src/modeling/symbolic/: __init__.py  helpers.py  regressor.py  toolbox.py
src/models/: __init__.py  common.py  fitting.py  pipeline.py  user.py  vlp.py  well_data.py
src/pipeline/: __init__.py  builder.py  transformers.py  vfp_pipeline.py
src/readers/: __init__.py  api.py  base.py  interfaces.py  metrics.py
src/readers/excel/: excel_reader.py
src/readers/models/: __init__.py  fitting.py
src/readers/slb_eclipse/: __init__.py  eclipse_reader.py  eclipse_summary_reader.py
src/utils/: __init__.py  data_collectors.py  validators.py  vfp_well_data_collector.py
src/vfp/: __init__.py  api.py  pipeline.py
src/vfp/modeling/: __init__.py  base.py  genetic_regressor.py  linear_regression.py
src/vfp/modeling/symbolic/: __init__.py  algebraic_simplification.py  helpers.py  primitives.py  regressor.py
src/vfp/models/: __init__.py  config.py
src/vfp/preprocess/: __init__.py  utils.py
src/vfp/utils/: __init__.py  export.py  logging.py
